// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`distinguish by props 1`] = `
[
  [
    0,
    120667947,
    "sample",
  ],
  [
    0,
    949666729,
    "seq",
  ],
  [
    0,
    998409329,
    "phasor",
  ],
  [
    0,
    1181055054,
    "const",
  ],
  [
    0,
    1229809873,
    "seq",
  ],
  [
    0,
    1423379257,
    "root",
  ],
  [
    0,
    1497369747,
    "sample",
  ],
  [
    0,
    1557538697,
    "const",
  ],
  [
    0,
    1737893648,
    "root",
  ],
  [
    0,
    2118771019,
    "le",
  ],
  [
    2,
    120667947,
    949666729,
    0,
  ],
  [
    2,
    949666729,
    2118771019,
    0,
  ],
  [
    2,
    998409329,
    1557538697,
    0,
  ],
  [
    2,
    1229809873,
    2118771019,
    0,
  ],
  [
    2,
    1423379257,
    120667947,
    0,
  ],
  [
    2,
    1497369747,
    1229809873,
    0,
  ],
  [
    2,
    1737893648,
    1497369747,
    0,
  ],
  [
    2,
    2118771019,
    998409329,
    0,
  ],
  [
    2,
    2118771019,
    1181055054,
    0,
  ],
  [
    3,
    120667947,
    "path",
    "test/path.wav",
  ],
  [
    3,
    949666729,
    "seq",
    [
      0,
      0,
      1,
    ],
  ],
  [
    3,
    1181055054,
    "value",
    0.5,
  ],
  [
    3,
    1229809873,
    "seq",
    [
      0,
      1,
      0,
    ],
  ],
  [
    3,
    1423379257,
    "channel",
    0,
  ],
  [
    3,
    1423379257,
    "fadeInMs",
    undefined,
  ],
  [
    3,
    1423379257,
    "fadeOutMs",
    undefined,
  ],
  [
    3,
    1497369747,
    "path",
    "test/path.wav",
  ],
  [
    3,
    1557538697,
    "value",
    2,
  ],
  [
    3,
    1737893648,
    "channel",
    1,
  ],
  [
    3,
    1737893648,
    "fadeInMs",
    undefined,
  ],
  [
    3,
    1737893648,
    "fadeOutMs",
    undefined,
  ],
  [
    4,
    [
      1423379257,
      1737893648,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`distinguished subtrees by key 1`] = `
[
  [
    0,
    371590287,
    "mul",
  ],
  [
    0,
    472261513,
    "phasor",
  ],
  [
    0,
    549707649,
    "mul",
  ],
  [
    0,
    555467758,
    "const",
  ],
  [
    0,
    650660620,
    "mul",
  ],
  [
    0,
    765455487,
    "sin",
  ],
  [
    0,
    1007055215,
    "phasor",
  ],
  [
    0,
    1057677500,
    "phasor",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1193164375,
    "const",
  ],
  [
    0,
    1427558172,
    "const",
  ],
  [
    0,
    1478357524,
    "sin",
  ],
  [
    0,
    1609650518,
    "sin",
  ],
  [
    0,
    1661951969,
    "const",
  ],
  [
    0,
    1802191769,
    "sin",
  ],
  [
    0,
    1875532204,
    "add",
  ],
  [
    0,
    1891960130,
    "root",
  ],
  [
    0,
    1933267990,
    "mul",
  ],
  [
    0,
    2030160862,
    "phasor",
  ],
  [
    2,
    371590287,
    1097289128,
    0,
  ],
  [
    2,
    371590287,
    2030160862,
    0,
  ],
  [
    2,
    472261513,
    1661951969,
    0,
  ],
  [
    2,
    549707649,
    1097289128,
    0,
  ],
  [
    2,
    549707649,
    1057677500,
    0,
  ],
  [
    2,
    650660620,
    1097289128,
    0,
  ],
  [
    2,
    650660620,
    472261513,
    0,
  ],
  [
    2,
    765455487,
    650660620,
    0,
  ],
  [
    2,
    1007055215,
    1193164375,
    0,
  ],
  [
    2,
    1057677500,
    1427558172,
    0,
  ],
  [
    2,
    1478357524,
    371590287,
    0,
  ],
  [
    2,
    1609650518,
    549707649,
    0,
  ],
  [
    2,
    1802191769,
    1933267990,
    0,
  ],
  [
    2,
    1875532204,
    1609650518,
    0,
  ],
  [
    2,
    1875532204,
    1802191769,
    0,
  ],
  [
    2,
    1875532204,
    1478357524,
    0,
  ],
  [
    2,
    1875532204,
    765455487,
    0,
  ],
  [
    2,
    1891960130,
    1875532204,
    0,
  ],
  [
    2,
    1933267990,
    1097289128,
    0,
  ],
  [
    2,
    1933267990,
    1007055215,
    0,
  ],
  [
    2,
    2030160862,
    555467758,
    0,
  ],
  [
    3,
    555467758,
    "key",
    "fq3",
  ],
  [
    3,
    555467758,
    "value",
    440,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1193164375,
    "key",
    "fq2",
  ],
  [
    3,
    1193164375,
    "value",
    440,
  ],
  [
    3,
    1427558172,
    "key",
    "fq1",
  ],
  [
    3,
    1427558172,
    "value",
    440,
  ],
  [
    3,
    1661951969,
    "key",
    "fq4",
  ],
  [
    3,
    1661951969,
    "value",
    440,
  ],
  [
    3,
    1891960130,
    "channel",
    0,
  ],
  [
    3,
    1891960130,
    "fadeInMs",
    undefined,
  ],
  [
    3,
    1891960130,
    "fadeOutMs",
    undefined,
  ],
  [
    4,
    [
      1891960130,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`multi-channel basics 1`] = `
[
  [
    0,
    704782214,
    "root",
  ],
  [
    0,
    897687670,
    "mul",
  ],
  [
    0,
    912820239,
    "phasor",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1709217017,
    "sin",
  ],
  [
    0,
    1709345783,
    "const",
  ],
  [
    0,
    2134855787,
    "root",
  ],
  [
    2,
    704782214,
    1709217017,
    0,
  ],
  [
    2,
    897687670,
    1097289128,
    0,
  ],
  [
    2,
    897687670,
    912820239,
    0,
  ],
  [
    2,
    912820239,
    1709345783,
    0,
  ],
  [
    2,
    1709217017,
    897687670,
    0,
  ],
  [
    2,
    2134855787,
    1709217017,
    0,
  ],
  [
    3,
    704782214,
    "channel",
    1,
  ],
  [
    3,
    704782214,
    "fadeInMs",
    undefined,
  ],
  [
    3,
    704782214,
    "fadeOutMs",
    undefined,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1709345783,
    "key",
    "fq",
  ],
  [
    3,
    1709345783,
    "value",
    440,
  ],
  [
    3,
    2134855787,
    "channel",
    0,
  ],
  [
    3,
    2134855787,
    "fadeInMs",
    undefined,
  ],
  [
    3,
    2134855787,
    "fadeOutMs",
    undefined,
  ],
  [
    4,
    [
      2134855787,
      704782214,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`numeric literals 1`] = `
[
  [
    0,
    198353271,
    "const",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1131011062,
    "mul",
  ],
  [
    0,
    1151416953,
    "sin",
  ],
  [
    0,
    1468062699,
    "root",
  ],
  [
    0,
    1734917263,
    "phasor",
  ],
  [
    2,
    1131011062,
    1097289128,
    0,
  ],
  [
    2,
    1131011062,
    1734917263,
    0,
  ],
  [
    2,
    1151416953,
    1131011062,
    0,
  ],
  [
    2,
    1468062699,
    1151416953,
    0,
  ],
  [
    2,
    1734917263,
    198353271,
    0,
  ],
  [
    3,
    198353271,
    "value",
    440,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1468062699,
    "channel",
    0,
  ],
  [
    3,
    1468062699,
    "fadeInMs",
    undefined,
  ],
  [
    3,
    1468062699,
    "fadeOutMs",
    undefined,
  ],
  [
    4,
    [
      1468062699,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`simple sharing 1`] = `
[
  [
    0,
    1442301653,
    "tanh",
  ],
  [
    0,
    1832877767,
    "root",
  ],
  [
    2,
    1442301653,
    1709217017,
    0,
  ],
  [
    2,
    1832877767,
    1442301653,
    0,
  ],
  [
    3,
    1832877767,
    "channel",
    0,
  ],
  [
    3,
    1832877767,
    "fadeInMs",
    undefined,
  ],
  [
    3,
    1832877767,
    "fadeOutMs",
    undefined,
  ],
  [
    4,
    [
      1832877767,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`structural equality with value change 1`] = `
[
  [
    3,
    1427558172,
    "value",
    441,
  ],
  [
    5,
  ],
]
`;

exports[`switch and switch back 1`] = `
[
  [
    4,
    [
      2063899281,
    ],
  ],
  [
    5,
  ],
]
`;

exports[`the basics 1`] = `
[
  [
    0,
    897687670,
    "mul",
  ],
  [
    0,
    912820239,
    "phasor",
  ],
  [
    0,
    1097289128,
    "const",
  ],
  [
    0,
    1709217017,
    "sin",
  ],
  [
    0,
    1709345783,
    "const",
  ],
  [
    0,
    2134855787,
    "root",
  ],
  [
    2,
    897687670,
    1097289128,
    0,
  ],
  [
    2,
    897687670,
    912820239,
    0,
  ],
  [
    2,
    912820239,
    1709345783,
    0,
  ],
  [
    2,
    1709217017,
    897687670,
    0,
  ],
  [
    2,
    2134855787,
    1709217017,
    0,
  ],
  [
    3,
    1097289128,
    "value",
    6.283185307179586,
  ],
  [
    3,
    1709345783,
    "key",
    "fq",
  ],
  [
    3,
    1709345783,
    "value",
    440,
  ],
  [
    3,
    2134855787,
    "channel",
    0,
  ],
  [
    3,
    2134855787,
    "fadeInMs",
    undefined,
  ],
  [
    3,
    2134855787,
    "fadeOutMs",
    undefined,
  ],
  [
    4,
    [
      2134855787,
    ],
  ],
  [
    5,
  ],
]
`;
